--- a/react-frontend/src/components/SignUp.css
+++ b/react-frontend/src/components/SignUp.css
@@ -1,25 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  min-height: 100vh;
-  overflow: hidden;
-}
-
-.container {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  flex: 1;
-  height: 100vh;
-}
-
 .header {
   background-color: black;
   color: white;
@@ -57,7 +35,7 @@ body {
   height: 20px;
 }
 
-.login {
+.register {
   background-color: black;
   color: white;
   padding: 20px;
@@ -85,10 +63,11 @@ body {
 }
 
 .inputBox input[type="text"],
-.inputBox input[type="password"] {
+.inputBox input[type="password"],
+.inputBox input[type="email"] {
   width: 100%;
   padding: 10px;
-  margin: 5px auto; /* center input fields horizontally */
+  margin: 5px auto;
   border: none;
   background-color: transparent;
   border-bottom: 2px solid white;
@@ -104,7 +83,7 @@ body {
   background-color: rgb(0, 200, 255);
   color: white;
   cursor: pointer;
-  border-radius: 0; /* Square corners */
+  border-radius: 0;
   transition: background-color 0.3s ease;
 }
 
@@ -112,7 +91,7 @@ body {
   background-color: rgb(0, 72, 139);
 }
 
-.forgotPassword {
+.alreadyHaveAccount {
   background: none;
   border: none;
   color: rgb(0, 200, 255);
@@ -120,6 +99,6 @@ body {
   cursor: pointer;
 }
 
-.forgotPassword:hover {
+.alreadyHaveAccount:hover {
   color: rgb(0, 72, 139);
 }
