--- a/react-frontend/src/components/Home.css
+++ b/react-frontend/src/components/Home.css
@@ -25,13 +25,21 @@ body {
 .header {
   background-color: black;
   color: white;
-  font-weight: bold;
+  /*font-weight: bold;*/
   font-size: 24px;
   padding: 20px;
-  text-align: center;
+  /*text-align: center;*/
   width: 100%;
   height: 50px;
+  /*padding-bottom: 40px;*/
+  text-align: left;
+  display: flex;
 }
+
+.header img{
+    /*width: 400px;*/
+}
+
   
 .header-text {
   margin-bottom: 10px;
@@ -49,8 +57,42 @@ body {
 .loginMenu{
 
   /*text-align: right;*/
+  display: flex;
   float: right;
   padding-right: 30px;
+  color: white !important;
+  margin-left: auto;
+  font-weight: 200 !important;
+
+
+}
+
+.loginMenu a{
+
+  color: white;
+  margin-right: 20px;
+  
+ 
+}
+
+.menuWrapper{
+
+  display: flex;
+  align-items: center;
+
+}
+
+.menuWrapper a{
+  text-decoration: none;
+
+}
+
+.LogOUT{
+
+  padding: 12px;
+  background-color: white;
+  color: black !important;
+  text-shadow: 0.5px 0.5px;
 }
 
 .containerMiddle{
@@ -71,6 +113,60 @@ body {
   margin-bottom: 100px;
   font-weight: bold;
 }
+
+.containerMiddle img{
+  border: solid red ;
+
+}
+
+.container h1{
+  background-color: rgba(255,255,255, 0.5);
+  color: black;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.containerH1{
+  display: flex;
+  justify-content: center;
+
+}
+
+
+.selectCategory{
+  background-color: white;
+  outline: none;
+  border: none;
+  padding: 20px;
+  border-radius: 6px;
+  font-size: larger;
+
+}
+
+
+
+
+.confirmUpload{
+  /*display: flex;
+  justify-content: center;
+  align-items: center;*/
+  /*height: 200px;*/
+  /*border: 3px solid green; */
+  margin-bottom: 10px;
+}
+
+
+#saveImage{
+  /*margin: auto;*/
+
+}
+
+.confirmUpload img{
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 
 .footer {
   position: fixed;
