--- a/react-frontend/src/components/Home.css
+++ b/react-frontend/src/components/Home.css
@@ -3,11 +3,11 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
     background-color: white;
-    display: flex;
+    /*display: flex;
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
-    overflow: hidden;
+    overflow: hidden;*/
 
   }
   
@@ -36,11 +36,7 @@ body {
   display: flex;
 }
 
-.header img{
-    /*width: 400px;*/
-}
 
-  
 .header-text {
   margin-bottom: 10px;
 }
@@ -95,13 +91,37 @@ body {
   text-shadow: 0.5px 0.5px;
 }
 
+
+/*banner*/
+
+.homePageBanner{
+  height: 300px;
+  width: 100%;
+
+}
+
+.homePageBannerMain{
+
+  position: relative;
+  width: 100%;
+  height: 300px;
+
+}
+
+.homePageBannerMain h1{
+  position: absolute;
+  left: 50%;
+  top:70%;
+  transform: translate(-50%,-50%);
+}
+
 .containerMiddle{
-  background-image: url(../Images/homeMainImage.jpg);
+  /*background-image: url(../Images/homeMainImage.jpg);*/
   width: 100%;
   height: 100%;
   background-size: cover; 
   background-position: center;  
-  padding-top: 80px;
+  /*padding-top: 80px;*/
   padding-bottom: 20px;
   padding-right: 20px;
   padding-left: 20px;
@@ -109,15 +129,19 @@ body {
   /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
   width: 100%;
   /*max-width: 400px;*/
-  margin-top: 100px;
+  /*margin-top: 100px;*/
   margin-bottom: 100px;
   font-weight: bold;
+  /*border: solid 1px black;*/
+  display: flex;
+  flex-direction: column;
+  /*text-align: left;*/
+  /*justify-content: center;*/
+  align-items: center;
 }
 
-.containerMiddle img{
-  border: solid red ;
 
-}
+
 
 .container h1{
   background-color: rgba(255,255,255, 0.5);
@@ -126,18 +150,12 @@ body {
   border-radius: 5px;
 }
 
-.containerH1{
-  display: flex;
-  justify-content: center;
-
-}
-
 
 .selectCategory{
   background-color: white;
   outline: none;
-  border: none;
-  padding: 20px;
+  /*border: none;*/
+  padding: 12px;
   border-radius: 6px;
   font-size: larger;
 
@@ -147,17 +165,12 @@ body {
 
 
 .confirmUpload{
-  /*display: flex;
-  justify-content: center;
-  align-items: center;*/
-  /*height: 200px;*/
-  /*border: 3px solid green; */
   margin-bottom: 10px;
 }
 
 
 #saveImage{
-  /*margin: auto;*/
+  margin-bottom: 50px;
 
 }
 
@@ -166,6 +179,24 @@ body {
   margin-right: auto;
   margin-left: auto;
 }
+
+
+/* Choose file input
+.chooseImage {
+  background-color: rgb(0, 200, 255);
+  border: 1px solid #4682b4;
+  border-radius: 5px;
+  padding: 8px 12px; 
+  color: #000;
+}
+
+
+.chooseImage:focus {
+  outline: none; 
+  border-color: #87ceeb; 
+}*/
+
+
 
 
 .footer {
