--- a/react-frontend/src/components/Login.css
+++ b/react-frontend/src/components/Login.css
@@ -3,11 +3,11 @@ body {
   padding: 0;
   font-family: Arial, sans-serif;
   background-color: white;
-  display: flex;
+  /*display: flex;
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
-  overflow: hidden;
+  overflow: hidden;*/
 }
 
 .container {
