--- a/react-frontend/src/components/MyCloset.css
+++ b/react-frontend/src/components/MyCloset.css
@@ -8,11 +8,29 @@
 
 /* Styles for the header */
 .header {
-  align-self: flex-end;
+  display: flex;
+  position: fixed;
+  height: 20px;
+  justify-content: flex-end;
+  align-items: center;
   padding: 20px;
   background-color: #000;
   color: #fff;
 }
+
+.header button {
+  margin-right: 35px; /* Adjust margin as needed */
+  background-color: transparent;
+  border: none;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.header button:hover {
+  text-decoration: underline;
+}
+
 
 /* Styles for the sidebar */
 .sidebar {
@@ -63,6 +81,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  margin-top: 100px;
 }
 
 /* Styles for the select dropdown */
