made home page responsive, swapped logo, made header white, added route for start page

--- a/react-frontend/src/components/StartPage.css
+++ b/react-frontend/src/components/StartPage.css
@@ -102,6 +102,10 @@
     .right-side-logo img{
     height: 70px;
     }
+
+    .right-side-logo p{
+        color:white
+    }
     .start-page-images{
     position: relative;
     height: 650px;
